--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "next"
   },
   "dependencies": {
-    "@gimmixfactory/contracts": "^0.0.9",
+    "@gimmixfactory/contracts": "^0.0.14",
     "@gimmixfactory/use-wallet": "^0.0.21",
     "@walletconnect/web3-provider": "^1.4.1",
     "ethers": "^5.1.3",
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-minimal-pie-chart": "^8.2.0",
     "swr": "^0.5.5",
     "zustand": "^3.4.1"
   },
